--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-MJBWLD2L');
+        })(window,document,'script','dataLayer','GTM-5LVLBDWP');
       </script>
     <!-- End Google Tag Manager -->
     <title>Counter Application</title>
@@ -20,7 +20,7 @@
     <script type="module" src="/src/main.tsx"></script>
     <!-- Google Tag Manager (noscript) -->
       <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MJBWLD2L" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5LVLBDWP" height="0" width="0" style="display:none;visibility:hidden"></iframe>
       </noscript>
     <!-- End Google Tag Manager (noscript) -->
   </body>
